# library-of-magic-squares

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
benches/: solver_benchmark.rs
examples/: annealing_algorithm.rs  solve_3x3.rs  solve_4x4.rs
src/: lib.rs  prelude.rs
src/backend/src/: magicsquare.rs  magicsquare_solver.rs  main.rs
src/solver/: backtrack.rs  gaussian_elimination.rs  mod.rs  simulated_annealing.rs
src/square/: magic.rs  mod.rs
src/utils/: mod.rs  validation.rs
tests/: integration_tests.rs
