[package]
name = "library-of-magic-squares"
version = "0.1.0"
edition = "2021"
authors = ["Fanelli Marco"]
description = "A Rust library for working with magic squares"
license = "MIT"
repository = "https://github.com/FanelliMarco/library-of-magic-squares"

[lib]
name = "magic_squares"
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "solver_benchmark"
harness = false

[features]
# Define any optional features here

[workspace]
members = [
    ".",
]
